SERVER-42065 Handle bindIpAll exception when ipv6 is not supported